<resources>
    <string name="app_name">Demineur</string>
    <string name="settings">Settings</string>

    <string name="menu">Menu</string>
    <string name="new_game">New game</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="random">Random</string>
    <string name="new_custom">Custom&#8230;</string>

    <string name="dialog_replay">Do you want to replay ?</string>
    <string name="result">You %1$s!</string>
    <string name="game_win">You win!</string>
    <string name="restart_game">Restart</string>

    <string name="lost">lost</string>
    <string name="won">won</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <string name="width">Width: </string>
    <string name="height">Height: </string>
    <string name="mines">Mines: </string>
    <string name="width_value">%d</string>
    <string name="height_value">%d</string>
    <string name="mines_value">%d</string>
    <string name="timer">"  "%1$02d:%2$02d</string>
    <string name="count_mines">" "%d</string>

    <string name="joker">Joker</string>
    <string name="safeMode">Safe move</string>
    <string name="safeModeActivated">Safe mode joker activated</string>
    <string name="burstMode">Burst move</string>
    <string name="burstModeActivated">Burst mode joker activated</string>

    <string name="grid_preference">Grid</string>
    <string name="grid_size_pref_title">Default size</string>
    <string name="grid_size_pref_summary">Choose the default grid size</string>
    <string name="anim_pref_title">Animation</string>
    <string name="anim_pref_summary">Use animation in game</string>
    <string name="vibration_pref_title">Vibration</string>
    <string name="vibration_pref_summary">Use vibration in game</string>

    <string name="musicDialog">Choose music</string>
    <string name="music">Music</string>
    <string name="resumeMusic">Resume</string>
    <string name="pauseMusic">Pause</string>
    <string name="stopMusic">Stop</string>
    <string name="music_pref_title">Resume music</string>
    <string name="music_pref_summary">Automatically resume last music</string>

    <string name="score">Score</string>
    <string name="newScore">"  "New score !</string>
    <string name="noScore">"  No best score yet"</string>
    <string name="total">Total</string>
    <string name="scoreTotalLine">Games played : %d</string>
    <string name="scoreWinLine">Games won : %d</string>
    <string name="scorePercentageLine">Win percentage : %.2f%%</string>
    <string name="clear">Clear</string>

    <string name="flagDesc">Activate/deactivate the flag mode</string>
    <string name="gameDesc">Game interface</string>

    <string name="help">Help</string>
    <string name="helpRuleTitle">Main rule</string>
    <string name="helpRule">"The aim of the game is to reveal all the cells that are not mines, as quickly as possible. If you reveal a mine, you lose the game."</string>
    <string name="helpGameTitle">1) New game</string>
    <string name="helpGame">"You can choose the grid configuration you want to play. To do so, open the New game menu after clicking on the + button. The beginner mode is the default configuration.
        The random choice will automatically generate a grid for you ! The custom choice will let you set your desired configuration. Note that these two last mode result will not appear in the score screen."</string>
    <string name="helpPlayTitle">2) Start game (timer)</string>
    <string name="helpPlay">"You can start the game by several ways. You can click on a random cell, put a flag (see flag section), or use a joker (see joker section).
        Any of these action will start the timer."</string>
    <string name="helpReplayTitle">3) Restart game</string>
    <string name="helpReplay">"If you want to restart the game with the same settings, you can click on the restart button. That action can be done whenever you want, especially after losing the game."</string>
    <string name="helpFlagTitle">4) Flag mode</string>
    <string name="helpFlag">"If you suspect a cell to be a mine, you can mark it by putting a flag. To do so, you have two different ways :
        - By clicking on the flag button. If the flag button is red, then you're already in the flag mode.
        - By doing a long press action on a cell. A short vibration will warm you that the action has been done, if you didn't disable vibration in the settings menu."
    </string>
    <string name="helpJokerTitle">5) Joker mode</string>
    <string name="helpJoker">"You can use jokers to help yourself!\nTo access them, click on the star in the toolbar menu.\nThere are two jokers :
          - Safe mode : your next will be safe. If you click on a mine, it will put a flg instead of exploding it !
          - Burst mode : it's a powerful move that will reveal all the adjacent cells of where you play ! A flag is put if any of these cells was a mine.
        When you activate a joker, the star will become yellow. If you click ont the flag button, it will cancel the joker and you can reactivate it later.
        You can use a joker only once, so think twice before using it !"
    </string>
    <string name="helpScoreTitle">6) Score menu</string>
    <string name="helpScore">"You can access your three best scores for each Beginner, Intermediate or Expert mode. You can also check how many games you've finished, and how many of them you won !
        Note that we don't show how many game you lost, because we don't want to discourage you :)"</string>
    <string name="helpMusicTitle">7) Play music</string>
    <string name="helpMusic">"Playing minesweeper becomes boring ? Play with your favorite song ! To choose a song in your device, open the Music menu after clicking on the + button."</string>
    <string name="glhf">Good luck, have fun !</string>

</resources>