<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory
    android:title="@string/grid_preference">

    <ListPreference
        android:key="gridSizePrefId"
        android:title="@string/grid_size_pref_title"
        android:summary="@string/grid_size_pref_summary"
        android:entries="@array/grid_size_array"
        android:entryValues="@array/grid_size_array"
        android:dialogTitle="@string/grid_size_pref_title"
        android:positiveButtonText="@string/accept"
        android:negativeButtonText="@string/cancel"
        android:defaultValue="@string/new_beginner"
        />
    <CheckBoxPreference
        android:key="animPrefId"
        android:title="@string/anim_pref_title"
        android:summary="@string/anim_pref_summary"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="vibrationPrefId"
        android:title="@string/vibration_pref_title"
        android:summary="@string/vibration_pref_summary"
        android:defaultValue="true"
        />

</PreferenceCategory>

</PreferenceScreen>