<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layoutSettingsId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/widthTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/width"/>

    <SeekBar
        android:id="@+id/widthSeekBarSettingsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/heightTextId"
        android:layout_toEndOf="@+id/heightTextId">
    </SeekBar>

    <TextView
        android:id="@+id/widthValueId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/heightSeekBarSettingsId"
        android:layout_alignRight="@+id/widthSeekBarSettingsId"
        android:text=""
        android:layout_alignEnd="@+id/widthSeekBarSettingsId">
    </TextView>

    <TextView
        android:id="@+id/heightTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:layout_below="@+id/widthSeekBarSettingsId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:id="@+id/heightSeekBarSettingsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/heightTextId"
        android:layout_toRightOf="@+id/heightTextId"
        android:layout_toEndOf="@+id/heightTextId"
        >
    </SeekBar>

    <TextView
        android:id="@+id/heightValueId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widthValueId"
        android:layout_alignRight="@+id/widthSeekBarSettingsId"
        android:layout_alignEnd="@+id/widthSeekBarSettingsId">
    </TextView>

    <TextView
        android:id="@+id/minesTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mines"
        android:layout_below="@+id/heightSeekBarSettingsId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:id="@+id/minesSeekBarSettingsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minesTextId"
        android:layout_toRightOf="@+id/heightTextId"
        android:layout_toEndOf="@+id/heightTextId">
    </SeekBar>

    <TextView
        android:id="@+id/minesValueId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heightValueId"
        android:layout_alignRight="@+id/widthSeekBarSettingsId"
        android:layout_alignEnd="@+id/widthSeekBarSettingsId">
    </TextView>

    <Button
        android:id="@+id/buttonAcceptSettingsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:layout_alignTop="@+id/buttonCancelSettingsId"
        android:layout_toLeftOf="@+id/buttonCancelSettingsId"
        android:layout_toStartOf="@+id/buttonCancelSettingsId">
    </Button>

    <Button
        android:id="@+id/buttonCancelSettingsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/minesSeekBarSettingsId"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </Button>

</RelativeLayout>