<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/winLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="12dp"
    android:layout_marginStart="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginEnd="12dp"
    tools:context="com.android.demineur.MainActivity"
    >

    <TextView
        android:id="@+id/newScoreLayoutId"
        android:text="@string/newScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TitleScoreText"
        android:drawableStart="@drawable/new_score"
        android:drawableLeft="@drawable/new_score"
        />

    <TextView
        android:id="@+id/modeTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="6dp"
        android:textAppearance="@style/TitleScoreText"
        android:layout_below="@+id/newScoreLayoutId"
        />

    <TextView
        android:id="@+id/firstScoreId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:drawableStart="@drawable/bombe1"
        android:drawableLeft="@drawable/bombe1"
        android:layout_below="@+id/modeTextId"
        />

    <TextView
        android:id="@+id/secondScoreId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:drawableStart="@drawable/bombe2"
        android:drawableLeft="@drawable/bombe2"
        android:layout_below="@+id/firstScoreId"
        />

    <TextView
        android:id="@+id/thirdScoreId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:drawableStart="@drawable/bombe3"
        android:drawableLeft="@drawable/bombe3"
        android:layout_below="@+id/secondScoreId"
        />

    <TextView
        android:id="@+id/replayTextId"
        android:text="@string/dialog_replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_below="@+id/thirdScoreId"
        android:textAppearance="@style/SettingsText"
        />

    <LinearLayout
        android:id="@+id/scoreLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/replayTextId"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/replayButtonId"
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/notReplayButtonId"
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</RelativeLayout>
